# odoo-dev-env

./: .env.example  .eslintrc.json  .gitignore  .mcp.json.example  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  ERRORS.md  GEMINI.md  MERGE_PLAN.md  README.md  control.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
.atl/: skill-registry.md
.devcontainer/: devcontainer.json  docker-compose.yml
.gemini/: settings.json
cli/: main.py
cli/commands/: context.py  db.py  down.py  init.py  install.py  load_backup.py  logs.py  reset_db.py  restart.py  scaffold.py  shell.py  status.py  test.py  tui.py  up.py  update.py
cli/core/: config.py  console.py  docker.py  paths.py
cli/templates/: anonymize.sql  env.j2  odoo.conf.j2  project_context.md.j2
cli/tui/: app.py
cli/tui/widgets/: actions_bar.py  log_viewer.py  status_panel.py
config/: odoo.conf
templates/module_template/: __manifest__.py
templates/module_template/security/: ir.model.access.csv
